# formula1-2025-grid-prediction

./: .gitignore  pyproject.toml  readme.md
data/sample/tools/: make_sample_data.py
src/f1proj/: __init__.py  cli.py  config.py  data_io.py  eval.py  fe.py  legacy_monolith.py  modeling.py  simulate.py  viz.py
